--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -16,7 +16,7 @@
         "id": "36LUevFuZ4XG"
       },
       "source": [
-        "# New Section"
+        "# Import Required Libraries"
       ]
     },
     {
@@ -38,17 +38,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "jxCiSn1W3ygi"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import re"
-      ]
+        "# Data Extraction"
+      ],
+      "metadata": {
+        "id": "TF1JuylBLbum"
+      }
     },
     {
       "cell_type": "code",
@@ -79,6 +75,15 @@
         "print(data3.shape)\n",
         "print(data.shape)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Pre-processing"
+      ],
+      "metadata": {
+        "id": "c2Y07s7ILKAm"
+      }
     },
     {
       "cell_type": "code",
@@ -313,6 +318,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Define cleaning functions"
+      ],
+      "metadata": {
+        "id": "nvtqZybKLmao"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -388,6 +402,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Call the cleaning functions"
+      ],
+      "metadata": {
+        "id": "wuDihciTL50p"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -435,42 +458,13 @@
         "for i in range(2218):\n",
         "    data['sessiontext'] = data['sessiontext'].apply(lambda x: cleaning(x))"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "background_save": true
-        },
-        "id": "UBqd3intjY0N"
-      },
-      "outputs": [],
-      "source": [
-        "#data.to_csv('cleandata.csv')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "background_save": true
-        },
-        "id": "OuKi_QmV3kiT"
-      },
-      "outputs": [],
-      "source": [
-        "#data = pd.read_csv(\"/cleandata.csv\", index_col=0, encoding = \"ISO-8859-1\")\n",
-        "#data.iloc[2211, :]['sessiontext']"
-      ]
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfH8AlIt8AqLWt9U9lbnW9",
+      "authorship_tag": "ABX9TyODR6Kjz4pEeB8Oc2+x5YjO",
       "include_colab_link": true
     },
     "gpuClass": "standard",
